# aah

./: .gitignore  README.md  pyproject.toml  setup_env.sh
aah/: basis.py  clusters.py  hamiltonian.py  log.py  main.py  utils.py
aah/dmrg/: hubbard1d_dmrg_new.py
aah_code/: __init__.py  basis.py  clusters.py  global_params.py  hamiltonian.py  log.py  main.py  real_space_dmrg.py  utils.py
code_notes/failed_transcription/: code_architecture_1_6-7-25_12-20.aux  code_architecture_1_6-7-25_12-20.fdb_latexmk  code_architecture_1_6-7-25_12-20.fls  code_architecture_1_6-7-25_12-20.tex
code_notes/theory_tex/: main.aux  main.fdb_latexmk  main.fls  main.out  main.pytxcode  main.tex  main.toc
tests/: test_clusters.py  test_hamiltonian.py  test_mlp.py
